--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MY STYLE</title>
+    <link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="stylea.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylet.css">
     <link rel="stylesheet" href="loader.css">
     <link rel="stylesheet" href="slider.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+    <link rel="stylesheet" href="medias.css">
    <style>
     h1{
       box-shadow: rgba(255, 255, 0, 0.601);
@@ -17,7 +19,7 @@
     filter: drop-shadow(1px 1px 20px rgba(255, 255, 0, 0.747));
     font-size: 2vw;
     }
-    *{
+        *{
      margin:0;
     padding:0;
     Box-sizing:border-box;
@@ -64,17 +66,17 @@
         <div class="hero-section">
             <div class="hero-text">
               
-            <h1>
+            <h1 class="h1-1">
                   <span style="
-    color: #00ff00 " class="word">Winter 
+                      color: #00ff00 " class="word">Winter 
                     <span class="superscript">2024</span> </span>
                   <span style="
-    color: #55e955cd "" class="word">Collection</span>
-                </h1>
+                  color: #55e955cd " class="word">Collection</span>
+            </h1>
                 <p style="color: #e6eac7;">Futuristic Design • Premium Materials • Limited Editions</p>
             </div>
             <div class="hero-video">
-              <video autoplay muted loop  src="./bjtdpeliiyxrp0zsiznm.mp4"></video>
+              <video class="video-3" autoplay muted loop class="video01" src="./bjtdpeliiyxrp0zsiznm.mp4"></video>
             </div>
         </div>
         
@@ -226,7 +228,7 @@
       <div style="position: relative;
       top: 1vh;" id="page4">
 
-        <video  autoplay loop muted  src="./original-15e5c1e7b869597b6f2a1c230f17e785.mp4"  ></video>
+        <video class="video-2" autoplay loop muted  src="./original-15e5c1e7b869597b6f2a1c230f17e785.mp4"  ></video>
         <footer>
           <div class="footer-container">
               <div class="footer-contact">
@@ -244,7 +246,7 @@
                   </div>
               </div>
               <div class="footer-logo">
-                  <h2><span>aj</span> WEB DESIGNER</h2>
+                  <h2><span>AJ </span> WEB DESIGNER</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   <div class="social-icons">
                       <a href="#"><i class="fab fa-facebook-f"></i></a>
