--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yellow</title>
-    <link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./favi.01.webp" type="image/x-icon">
     <link rel="stylesheet" href="stylea.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylet.css">
