done some changes in clothing section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
         <nav class="navbar">
             <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Shop</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="#">NewIn</a>
+            <a href="#">Men</a>
+            <a href="#">Women</a>
+            <a href="#">Kids</a>
           </nav>
           <button class="btn-82"><span>Shop</span></button>
     </header>
@@ -218,7 +218,7 @@
           </h1>
           <div class="author">
               <h4>.....</h4>
-              <p><b>Clothing Design</b></p>
+              <p><b>Western To Come</b></p>
              
           </div>
           <div class="model"></div>
