--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="mainmain">    <div id="main1">
       <header class="header">
-        <a href="#" class="logo">Starlab</a>
+        <a href="#" class="logo">Yellow</a>
         
         <i class='bx bx-menu' id="menu-icon"></i>
 
